--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,11 @@
 server {
     listen       80;
     listen  [::]:80;
-    server_name  flutter-web-test;
+    server_name  flutter-web-test-production.up.railway.app/;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        try_files $uri $uri/ /index.html /web/index.html;
+        try_files $uri $uri/ /index.html;
     }
-
 }
