--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,13 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  flutter-web-test-production.up.railway.app/;
+    listen       80 default_server;
+    listen  [::]:80 default_server;
+
+    root /var/www/html;
+    index index.html index.htm;
+
+    server_name  _;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ =404;
     }
 }
