--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,8 @@
 server {
-    listen       80 default_server;
-    listen  [::]:80 default_server;
+        listen 80;
+        listen [::]:80;
 
-    root /var/www/html;
-    index index.html index.htm;
+        server_name flutter-web-test-production.up.railway.app;
 
-    server_name  _;
-
-    location / {
-        try_files $uri $uri/ =404;
-    }
+        return 301 https://$host$request_uri;
 }
