--- a/nginx.conf
+++ b/nginx.conf
@@ -6,3 +6,18 @@ server {
 
         return 301 https://$host$request_uri;
 }
+
+server {
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+
+  add_header Access-Control-Allow-Origin *;
+
+  server_name flutter-web-test-production.up.railway.app;
+ 
+  location / {
+    root /usr/share/nginx/html/;
+    include /etc/nginx/mime.types;
+    try_files $uri $uri/ /index.html;
+  }
+}
