--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
         listen 80;
         listen [::]:80;
 
-        server_name flutter-web-test-production.up.railway.app;
+        server_name _;
 
         return 301 https://$host$request_uri;
 }
