--- a/nginx.conf
+++ b/nginx.conf
@@ -4,5 +4,11 @@ server {
 
         server_name _;
 
-        return 301 https://$host$request_uri;
+        index index.html index.htm; 
+ 
+        server_name  _; 
+ 
+        location / { 
+          try_files $uri $uri/ =404; 
+        } 
 }
