--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: root101
-description: Onboard page for Root101 portal
+description: Test web server in flutter
 publish_to: 'none'
 
-version: 1.0.0-RELEASE.20230915
+version: 1.0.0
 
 environment:
-  sdk: ">=3.1.0 <4.0.0"
-  flutter: ">=3.13.0"
+  sdk: ^3.7.0
+  flutter: ^3.29.0
 
 dependencies:
   flutter:
